--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Test files
+/Users/owen_/Documents/Prep and Tutorials/webscraper/src/test/java/com/owen
